# pysyslog-lfc

./: .pylintrc  DEPLOYMENT_UPDATES.md  MISSING_COMPONENTS.md  QUICK_TEST.md  README.md  UBUNTU_DEPLOYMENT.md  VERIFICATION_SUMMARY.md  install.bat  install.sh  pyproject.toml  requirements.txt  setup.py  test_example_config.py  uninstall.sh
.github/workflows/: pylint.yml
docs/configuration/: filters.md  flows.md  inputs.md  main.md  outputs.md  parsers.md
docs/configuration/filters/: numeric.md
docs/configuration/inputs/: http.md
docs/configuration/outputs/: alert.md  metrics.md  postgresql.md
etc/pysyslog/: main.ini  main.ini.example
etc/pysyslog/conf.d/: enrich.ini
etc/rsyslog.d/: pysyslog.conf
etc/systemd/system/: pysyslog.service
lib/pysyslog/: components.py
lib/pysyslog/filters/: __init__.py  boolean.py  field.py  numeric.py
lib/pysyslog/inputs/: __init__.py  file.py  (+3 more)
pysyslog/: __init__.py  components.py  config.py  flow.py  main.py
pysyslog/filters/: base.py  boolean.py  email.py  hash.py  hostname.py  ip.py  json.py  level.py  list.py  mac.py  mime.py  numeric.py  path.py  port.py  protocol.py  regex.py  timestamp.py  url.py  uuid.py  version.py
pysyslog/inputs/: file.py  flow.py  http.py  unixsock.py
pysyslog/outputs/: alert.py  memory.py  metrics.py  postgresql.py  tcp.py
pysyslog/parsers/: passthrough.py  rfc3164.py
src/pysyslog/: __init__.py  channels.py  cli.py  config.py  flow.py  runtime.py
src/pysyslog.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_channels.py  test_config_loader.py  test_flow_runtime.py
(+18 files in other folders)
