[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysyslog"
version = "0.2.0"
description = "Asynchronous, flow-based log processor with reliable channels"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "PySyslog Team", email = "support@pysyslog.org" },
]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Logging",
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pytest-asyncio>=0.21",
]

[project.scripts]
pysyslog = "pysyslog.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false
